k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: test
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - http:     # without host >> works with the cluster IP
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 80

          - path: /post
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 4000

          - path: /posts
            pathType: Exact
            backend:
              service:
                name: query-srv
                port:
                  number: 4002

          - path: /posts/
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
